--- a/index.html
+++ b/index.html
@@ -1,77 +1,85 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  	<script src="http://d3js.org/d3.v3.min.js"></script>
+<meta charset="utf-8">
+<style>
+ 
+body {
+font: 10px sans-serif;
+}
+ 
+.axis path, .axis line {
+fill: none;
+stroke: #000;
+shape-rendering: crispEdges;
+}
+ 
+.point {
+fill: steelblue;
+stroke: #000;
+}
+ 
+</style>
+<body>
+<script src="http://d3js.org/d3.v2.js?2.9.6"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<script>
+ 
+var margin = {top: 20, right: 20, bottom: 30, left: 40},
+width = 960 - margin.left - margin.right,
+height = 500 - margin.top - margin.bottom;
+ 
+var x = d3.scale.linear()
+.range([0, width]);
+ 
+var y = d3.scale.linear()
+.range([height, 0]);
 
-  </head>
-  
-  <body>
-  	<script type="text/javascript">
+var tip = d3.tip()
+  .attr('class', 'd3-tip')
+  .offset([-10, 0])
+  .html(function(d) {
+    return "<strong>Distance:</strong> <span style='color:red'>" + d.distly + "</span>";
+  })
 
-  		d3.csv("stars_new_small.csv", function(error, dataset) {
-        if (error) {
-            console.log(error);
-        } else {
-            console.log(dataset);  // Print data out to console
-        }
-    });
+ 
+var svg = d3.select("body").append("svg")
+.attr("width", width + margin.left + margin.right)
+.attr("height", height + margin.top + margin.bottom)
+.append("g")
+.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-//   		function drawBubbles() {
-// 		  data = d3.csv("stars_new_small.csv", function(d) {
-//   			return {
-// 	    	date: d.date,
-// 	    	headline: d.headline,
-// 	    	x: d.x,
-// 	    	y: d.y,
-// 	    	z: d.z,
-// 	    	color: d.color,
-// 	    	lum: d.lum,
-// 	    	snippet: d.snippet,
-// 	    	distance: d.distly
-//   			};
-// 		  var width = 900;
-// 		  var height = 500;
-// 		  var canvas = d3.select('.svg_display').append('svg')
-// 		    .attr('width', width)
-// 		    .attr('height', height)
-// 		    .append('g')
-// 		      .attr('transform', "translate(100, 250)");
-// 		  var pack = d3.layout.pack()
-// 		    .size([width, height - 50 ])
-// 		    .padding(10);
-// 		  var drawNodes = function(data) {
-// 		    console.log(data);
-// 		    var node = canvas.selectAll('.node')
-// 		      .data(data)
-// 		      .enter()
-// 		      .append('g')
-// 		        .attr('class', 'node')
-// 		        .attr('transform', function(d) { return "translate(" + d.x + "," + d.y + ")"; })
-// 		        .on('mouseover', bounce);
-// 		    node.append('circle')
-// 		      .attr('r', function (d) { return d.r; })
-// 		      .attr('fill', 'red')
-// 		      .attr('opacity', 0.25)
-// 		      .attr('stroke', 'ADADAD')
-// 		      .attr('stroke-width', '2');
-// 		    node.append("text")
-// 		    .attr("dx", 12)
-// 		    .attr("dy", ".35em")
-// 		    .text(function(d) { return d.title; });
-// 		  };
-// 		  drawNodes(data);
-// 		}
 
-// function bounce(){
-//   d3.select(this) //selecting the element to be bounced
-//   .transition()
-//   // 'transform', function(d) { return "translate(" + d.x + "," + d.y + ")"; }
-//   .attr("transform", "translate(" + Math.random() * (Math.random() * 900) + "," + Math.random() * 40 + ")")
-//   .duration(1000)
-//   .ease('bounce')
-// }
+svg.call(tip);
 
-  	</script>
-  </body>
-
- </html>
+ 
+d3.csv("amnhdata.csv", function(data) {
+ 
+// Coerce the strings to numbers.
+data.forEach(function(d) {
+	d.x = +d.x;
+	d.y = +d.y;
+	d.date = d.date;
+	d.color = d.color;
+	d.lum = d.lum;
+	d.distly = d.distly;
+	d.headline = d.headline;
+	d.snippet = d.snippet;
+	d.link = d.link;
+});
+ 
+// Compute the scales’ domains.
+x.domain(d3.extent(data, function(d) { return d.x; })).nice();
+y.domain(d3.extent(data, function(d) { return d.y; })).nice();
+ 
+ 
+// Add the points!
+svg.selectAll(".point")
+.data(data)
+.enter().append("path")
+.attr("class", "point")
+.attr("d", d3.svg.symbol().type("triangle-up"))
+.attr("transform", function(d) { return "translate(" + x(d.x) + "," + y(d.y) + ")"; })
+.on('mouseover', tip.show)
+      .on('mouseout', tip.hide);
+});
+ 
+</script>
