--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
  
 </style>
 <body>
+	<h1>We see light coming from stars that left (X) light years ago. In the same way, those stars RIGHT NOW will see light (including radio waves) that left Earth (x) light years ago. Cick on a star, and see what was happening on earth when that star light we see now left that star</h1>
 	<script src="http://d3js.org/d3.v2.js?2.9.6"></script>
 	<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 	<script>
@@ -37,7 +38,8 @@
 		  .attr('class', 'd3-tip')
 		  .offset([-10, 0])
 		  .html(function(d) {
-		    return "<strong>Distance:</strong> <span style='color:red'>" + d.distly + "</span>";
+		    return "<strong>Distance:</strong> <span style='color:red'>" + d.distly + " light years </span><BR />" +
+			d.date + " " + d.headline + "<BR /> <A HREF=\"" + d.link + "\">link to story</a>";
 		  })
  
 		var svg = d3.select("body").append("svg")
@@ -55,7 +57,7 @@
 		data.forEach(function(d) {
 			d.x = +d.x;
 			d.y = +d.y;
-			d.date = d.date;
+			d.date = d.date_x;
 			d.color = d.color;
 			d.lum = d.lum;
 			d.distly = d.distly;
@@ -74,10 +76,12 @@
 		.data(data)
 		.enter().append("path")
 		.attr("class", "point")
-		.attr("d", d3.svg.symbol().type("triangle-up"))
+		.attr("d", d3.svg.symbol().type("rect"))
 		.attr("transform", function(d) { return "translate(" + x(d.x) + "," + y(d.y) + ")"; })
 		.on('mouseover', tip.show)
-		      .on('mouseout', tip.hide);
+		.on('mouseout', tip.hide)
+		.filter(function(d) { return d.x ==0; })  //highlight the sun     
+			.style("fill", "red") 
 		});
  
 	</script>
