--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 	shape-rendering: crispEdges;
 	}
 	 
-	.point {
-	fill: steelblue;
+	.circle {
 	stroke: #000;
 	}
- 
+ 	.svg {
+		width: 70%;			
+	}
+
 </style>
 <body>
 	<h1>We see light coming from stars that left (X) light years ago. In the same way, those stars RIGHT NOW will see light (including radio waves) that left Earth (x) light years ago. Cick on a star, and see what was happening on earth when that star light we see now left that star</h1>
 	<script src="http://d3js.org/d3.v2.js?2.9.6"></script>
 	<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+	<div class='svg'>
 	<script>
  
 		var margin = {top: 20, right: 20, bottom: 30, left: 40},
-		width = 960 - margin.left - margin.right,
+		width = 1000 - margin.left - margin.right,
 		height = 500 - margin.top - margin.bottom;
 		 
 		var x = d3.scale.linear()
@@ -46,11 +49,10 @@
 		  })
  
 		var svg = d3.select("body").append("svg")
-		.attr("width", width + margin.left + margin.right)
-		.attr("height", height + margin.top + margin.bottom)
+		.attr("width", 1000)
+		.attr("height",500)
 		.append("g")
-		.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
+	
 		svg.call(tip);
 
  
@@ -67,6 +69,7 @@
 			d.headline = d.headline;
 			d.snippet = d.snippet;
 			d.link = d.link;
+			d.appmag = d.appmag;
 		});
  
 		// Compute the scales’ domains.
@@ -75,12 +78,15 @@
  
  
 		// Add the points!
-		svg.selectAll(".point")
+		svg.selectAll(".circle")
 		.data(data)
-		.enter().append("path")
-		.attr("class", "point")
-		.attr("d", d3.svg.symbol().type("rect"))
+		.enter().append("circle")
+		.attr("class", "circle")
+		.attr("d", d3.svg.symbol().type("circle"))
 		.attr("transform", function(d) { return "translate(" + x(d.x) + "," + y(d.y) + ")"; })
+		.attr("r", function(d) { 
+					return d.appmag; })
+		.attr("fill", function(d){return d.color;})
 		.on('mouseover', tip.show)
 		.on('mouseout', tip.hide)
 		.filter(function(d) { return d.x ==0; })  //highlight the sun     
@@ -88,6 +94,7 @@
 		});
  
 	</script>
-</body>
+	</div>
+	</body>
 
 
