--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
  	.svg {
 		text-align: center;
 		width: 70%;
+		height: 70%;
 		margin-left: 15%;
 		margin-right: 15%;
+	}
+	h1{
+		text-align: center;
 	}
 
 </style>
