--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<head>
+<title>
+Star-Date
+</title>
+</head>
 <style>
 
 	body {
@@ -19,10 +24,8 @@
 	}
 
  	.svg {
-		width: 70%;
-		height: 70%;
-		margin-left: 15%;
-		margin-right: 15%;
+		width: 100%;
+		height: 100%;
 	}
 	h1{
 		text-align: center;
@@ -33,28 +36,34 @@
 	.logo {
 		text-align: left;
 	}
-	.infobox {
-		border: thin, black;
+	#content {
+  		margin-left:  20%;
 	}
-
+	#infobox {
+  		float: left;
+  		width: 15%;
+	}
 </style>
 <body>
 	<h1 class='logo'>Star-Date</h1>
 	<!-- <h1 class='intro'>We see light coming from stars that left (X) light years ago. In the same way, those stars RIGHT NOW will see light (including radio waves) that left Earth (x) light years ago. Cick on a star, and see what was happening on earth when that star light we see now left that star</h1> -->
-	<p class='info'></p>
+	<div id="container">
+  		<div id="infobox">text goes here</div>
+  		<div id="content"></div>
+	</div>	
 	<script src="http://d3js.org/d3.v2.js?2.9.6"></script>
 	<script>
 		var x = d3.scale.linear()
-               .range([0, 1000]);
+               .range([0, 1200]);
 
                var y = d3.scale.linear()
-               .range([500, 0]);
+               .range([700, 0]);
 
-		var infobox = d3.select("p");	// select our p tag
+		var infobox = d3.select("#infobox");	// select our p tag
 			infobox.style("visibility", "hidden");
 
 
-		var svg = d3.select("body").append("svg")
+		var svg = d3.select("#content").append("svg")
 		.attr('class', 'svg')
 		.attr("width", 1000)
 		.attr("height",500)
@@ -66,7 +75,7 @@
 		data.forEach(function(d) {
 			d.x = +d.x;
 			d.y = +d.y;
-			d.date = d.date_x;
+			d.date = new Date(d.date_x);
 			d.color = d.color;
 			d.lum = d.lum;
 			d.distly = d.distly;
@@ -91,14 +100,19 @@
 		.attr("r", function(d) {
 					return d.appmag; })
 		.attr("fill", function(d){return d.color;})
-		.attr("opacity", .75)
+		.attr("opacity", .65)
 		.on("mouseover", function(d) {
 			var circle = d3.select(this);
 
-			var infobox = d3.select("p").attr('class', 'infobox'); // select our p tag
+			var infobox = d3.select("#infobox"); // select our p tag
 			infobox.style("visibility", "visible");	// on mouse over, it should be visible
-			infobox.html("<strong>Distance:</strong>" + d.distly + " light years </span><BR />" +
-			d.date + " " + d.headline + "<BR />" + d.snippet + "<BR /> <A HREF=\"" + d.link + "\">link to story</a>");
+			if (d.x == 0)
+				infobox.html("<h3>Our Sun</h3><BR/> 0 light years away");
+			else
+				infobox.html(
+					"<h3>Distance: </h3>" + d.distly + " light years away</span><BR /><BR /><h3>"
+					+  d.date.toDateString() + " " + d.headline + "</h3><BR />" + d.snippet 
+					+ "<BR /> <A HREF=\"" + d.link + "\">link to story</a>");
 			d3.select(this).transition().duration(500).attr("r", d.appmag * 1.5)
 
 		})
@@ -108,8 +122,6 @@
 
 		})
 
-
-
 		.filter(function(d) { return d.x ==0; })
 			.style("fill", "#FFF5F2")
 		});
@@ -117,5 +129,6 @@
 	</script>
 	</div>
 	</body>
+</html>
 
 
